kubernetes/apps/networking/pihole/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pihole
  namespace: networking
  annotations:
    external-dns.alpha.kubernetes.io/hostname: pihole.tituslab.dev
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - pihole.tituslab.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: pihole-web
          port: 80
